--- a/user/login.html
+++ b/user/login.html
@@ -46,7 +46,7 @@
         methods:{
             login:function () {
                 var _self = this;
-                $.ajax({
+                $.ajax({git
                     url:'http://localhost/workDailySys/user/login.php',
                     type:'POST',
                     dataType:'json',
