--- a/user-agent/_index.html
+++ b/user-agent/_index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
     <script src="../lib/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-
+    <link rel="stylesheet" href="../css/site-header.css">
     <link rel="stylesheet" href="../css/mainpage.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
         <ul class="col-md-3 nav nav-pills">
             <li role="presentation" class="active"><a href="#">个人首页</a></li>
             <li role="presentation"><a href="#">查看日报</a></li>
-            <li role="presentation"><a href="#">新建日报</a></li>
+            <li role="presentation"><a href="newDaily.html">新建日报</a></li>
         </ul>
         <div class="col-md-5 col-md-offset-4">
             <div class="row user-info">
