2017年10月28日提交

--- a/user/login.html
+++ b/user/login.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">
     <title>请登录</title>
+    <!--引入项目所需框架库-->
     <script src="../lib/jquery-3.2.1.min.js"></script>
     <script src="../lib/vue/vue.js"></script>
     <link rel="stylesheet" href="../lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
     <script src="../lib/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-
+    <!--站点公用样式与功能-->
+    <link rel="stylesheet" href="../css/site-header.css">
+    <script src="../js/readCookie.js"></script>
+    <!--此页所需的功能和样式-->
     <link rel="stylesheet" href="../css/login.css">
     <script src="../js/login.js"></script>
 </head>
