--- a/user-agent/newDaily.html
+++ b/user-agent/newDaily.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN" xmlns:v-on="http://www.w3.org/1999/xhtml">
+<html lang="zh-CN" xmlns:v-on="http://www.w3.org/1999/xhtml" xmlns:v-bind="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,7 +26,6 @@
     <div class="row">
         <ul class="col-md-3 nav nav-pills">
             <li role="presentation"><a href="_index.php">个人首页</a></li>
-            <li role="presentation"><a href="#">查看日报</a></li>
             <li role="presentation" class="active"><a href="newDaily.html">新建日报</a></li>
         </ul>
         <div class="col-md-5 col-md-offset-4">
@@ -105,7 +104,25 @@
     </div>
     <div class="row btn-content">
         <button class="btn btn-primary" id="addDaily" v-on:click.prevent="submitData">提交</button>
-        <button class="btn btn-warning">取消</button>
+    </div>
+</div>
+
+<!--Site Modal -->
+<div class="modal fade" id="siteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">{{modalHeader}}</h4>
+            </div>
+            <div class="modal-body">
+                <p v-for="item in items">{{item.text}}</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn" v-bind:class="btn1.classList" data-dismiss="modal" v-if="btn1.show">{{btn1.text}}</button>
+                <button type="button" v-bind:class="btn2.classList" v-if="btn2.show">{{btn2.text}}</button>
+            </div>
+        </div>
     </div>
 </div>
 </body>
