--- a/user-agent/_index.html
+++ b/user-agent/_index.html
@@ -34,7 +34,7 @@
 
 <div class="container recentDaily">
     <div class="row block-title">
-        <h2>工作汇报列表</h2>
+        <h2>我的工作汇报列表</h2>
     </div>
     <div class="row block-content">
         <div class="col-md-4">
@@ -53,40 +53,33 @@
             <p><span>3</span>条回复<a href="#">查看</a></p>
         </div>
     </div>
+</div>
 
-    <div class="row block-content">
-        <div class="col-md-4">
-            <h3><span>1</span>Title</h3>
-            <p>使用谷歌浏览器调js问题，发现谷歌浏览器总是缓存之前的js信息，就想禁止浏览器缓存，在网络上找来找去都是之前的版本的谷歌浏览器的设置方法，我的浏览器版本是55.0.2883.87 m的和之前的不同了，后经过摸索找到了方法，如下...</p>
-            <p><span>3</span>条回复<a href="#">查看</a></p>
-        </div>
-        <div class="col-md-4">
-            <h3><span>2</span>Title</h3>
-            <p>使用谷歌浏览器调js问题，发现谷歌浏览器总是缓存之前的js信息，就想禁止浏览器缓存，在网络上找来找去都是之前的版本的谷歌浏览器的设置方法，我的浏览器版本是55.0.2883.87 m的和之前的不同了，后经过摸索找到了方法，如下...</p>
-            <p><span>3</span>条回复<a href="#">查看</a></p>
-        </div>
-        <div class="col-md-4">
-            <h3><span>3</span>Title</h3>
-            <p>使用谷歌浏览器调js问题，发现谷歌浏览器总是缓存之前的js信息，就想禁止浏览器缓存，在网络上找来找去都是之前的版本的谷歌浏览器的设置方法，我的浏览器版本是55.0.2883.87 m的和之前的不同了，后经过摸索找到了方法，如下...</p>
-            <p><span>3</span>条回复<a href="#">查看</a></p>
-        </div>
+<div class="container view-underling">
+    <div class="row vu-title">
+        <h2>我直接管理的员工</h2>
     </div>
-
-    <div class="row block-content">
+    <div class="row vu-list">
+       <div class="col-md-4">
+           <p>姓名</p>
+           <p>部门</p>
+           <p>邮箱</p>
+           <p>用户类型</p>
+           <p><a href="#">查看</a></p>
+       </div>
         <div class="col-md-4">
-            <h3><span>1</span>Title</h3>
-            <p>使用谷歌浏览器调js问题，发现谷歌浏览器总是缓存之前的js信息，就想禁止浏览器缓存，在网络上找来找去都是之前的版本的谷歌浏览器的设置方法，我的浏览器版本是55.0.2883.87 m的和之前的不同了，后经过摸索找到了方法，如下...</p>
-            <p><span>3</span>条回复<a href="#">查看</a></p>
+            <p>姓名</p>
+            <p>部门</p>
+            <p>邮箱</p>
+            <p>用户类型</p>
+            <p><a href="#">查看</a></p>
         </div>
         <div class="col-md-4">
-            <h3><span>2</span>Title</h3>
-            <p>使用谷歌浏览器调js问题，发现谷歌浏览器总是缓存之前的js信息，就想禁止浏览器缓存，在网络上找来找去都是之前的版本的谷歌浏览器的设置方法，我的浏览器版本是55.0.2883.87 m的和之前的不同了，后经过摸索找到了方法，如下...</p>
-            <p><span>3</span>条回复<a href="#">查看</a></p>
-        </div>
-        <div class="col-md-4">
-            <h3><span>3</span>Title</h3>
-            <p>使用谷歌浏览器调js问题，发现谷歌浏览器总是缓存之前的js信息，就想禁止浏览器缓存，在网络上找来找去都是之前的版本的谷歌浏览器的设置方法，我的浏览器版本是55.0.2883.87 m的和之前的不同了，后经过摸索找到了方法，如下...</p>
-            <p><span>3</span>条回复<a href="#">查看</a></p>
+            <p>姓名</p>
+            <p>部门</p>
+            <p>邮箱</p>
+            <p>用户类型</p>
+            <p><a href="#">查看</a></p>
         </div>
     </div>
 </div>
